welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: not found: value num
	if ( num%5==0 && num%3==0 ) {
             ^fizzBuzz:5: error: not found: value num
	else if ( num%3==0) {
                  ^fizzBuzz:8: error: not found: value num
	else if ( num%5==0) {
                  ^fizzBuzz:8: error: type mismatch;
 found   : Unit
 required: String
	else if ( num%5==0) {
             ^