welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
	if ( num%5==0 && num%3==0 ) {
		"Fizz Buzz"
	}
	else if ( num%3==0) {
		"Fizz"
	}
	else if ( num%5==0) {
		"Buzz"
	}
}
